Schema information and job submission code updated
